tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : \Number => Null
  = \(x: String) => null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_2.kk:3:10
  │
3 │   = \(x: String) => null
  │          ^^^^^^ Wrong type annotation
  │
  = The expected type annotation is:

      Number
