tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = \({ x = { z } }: { x: { y: number } }) => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_5.kk:1:19
  │
1 │ let f = \({ x = { z } }: { x: { y: number } }) => 2
  │                   ^ No such property
  │
  = Available properties:
      y
