tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_8.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: {
  f: \{ x: number } => number
} = {
  f = \o => o.y
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_8.kk:4:15
  │
4 │   f = \o => o.y
  │               ^ No such property
  │
  = Available properties:
      x
