tests/snapshots/test_runner__tests__compiler__typecheck__promise_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: !Null
  = let! x = 1 # Right side must be promise
    x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/promise_1.kk:2:14
  │
2 │   = let! x = 1 # Right side must be promise
  │              ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - !@TVAR0     | + Integer   |
    +---------------+-------------+
